fixed footer line spacing

--- a/public/assets/css/templatemo-stand-blog.css
+++ b/public/assets/css/templatemo-stand-blog.css
@@ -155,12 +155,6 @@ h1,h2,h3,h4,h5,h6 {
   }
 }
 
-[data-banner-id="6081754"] {
-  max-width: 100%;
-  overflow-x: hidden;
-  display: block;
-}
-
 
 /* Header Style */
 header {
@@ -862,8 +856,8 @@ footer {
 }
 
 footer ul.social-icons {
-	padding-bottom: 60px;
-	margin-bottom: 60px;
+	padding-bottom: 30px;
+	margin-bottom: 30px;
 	border-bottom: 1px solid rgba(250,250,250,0.15);
 }
 
